para evitar mensagem de alerta